Upgrading to java 9