@@ -1,18 +1,9 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins {
+    id "com.jfrog.bintray" version "1.7.3"
 }
-apply plugin: 'com.jfrog.bintray'
 
 group 'org.gdal'
-version '0.0.1'
+version '0.0.2'
 
 allprojects {
     repositories {
@@ -23,22 +14,72 @@ allprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'java'
     apply plugin: 'application'
+    apply plugin: 'idea'
 }
 
-mainClassName = "org.gdal.NativeLoader"
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
+ext.moduleName = 'gdal-fat'
+mainClassName = 'org.gdal.NativeLoader'
+sourceCompatibility = 1.9
+
+
+
+compileJava {
+    println classpath.asPath
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'junit',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
+}
+
+test {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+        ]
+        classpath = files()
+    }
+}
+
 jar {
+    inputs.property("moduleName", moduleName)
     manifest {
-        attributes("Implementation-Title": project.name,
+        attributes(
+                'Main-Class': mainClassName,
+                'Automatic-Module-Name': moduleName,
+                "Implementation-Title": project.name,
                 "Implementation-Version": version,
                 'Built-By': System.getProperty('user.name'),
                 'Built-Date': new Date(),
-                'Built-JDK': System.getProperty('java.version'),
-                "Main-Class": mainClassName)
+                'Built-JDK': System.getProperty('java.version'))
     }
 }
 
@@ -49,8 +90,19 @@ task sourcesJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
 }
 
+javadoc{
+    options.addStringOption('-module-path', classpath.asPath)
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = "javadoc"
+    from 'build/docs/javadoc'
+}
+
 artifacts {
+    archives jar
     archives sourcesJar
+    archives javadocJar
 }
 
 publishing {
@@ -60,12 +112,19 @@ publishing {
             groupId group
             artifactId project.name
             version version
-
             artifact sourcesJar
+            artifact javadocJar
         }
     }
 }
 
+idea {
+    module {
+        inheritOutputDirs = true
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
 
 bintray {
     user = project.hasProperty('bintrayUser') ? project.bintrayUser : System.getenv('BINTRAY_USER')
